--- a/HTML/css/common.css
+++ b/HTML/css/common.css
@@ -1,10 +1,12 @@
 *{
     margin: 0;
 }
+
 :root{
     --bg-color: #a08a7c;
     --main-color: #d4c1b1;
 }
+
 html{
     width: 100%;
     font-family: "Roboto", 'Arial','Yu Gothic','Yu Gothic UI','MS ゴシック', sans-serif;
@@ -20,4 +22,14 @@ body{
 img{
     width: 100%;
     height: auto;
+}
+
+.section-title{
+    width: 50%;
+    font-size: 108px;
+    font-weight: 700;
+}
+
+.description{
+    font-size: 11.2%;
 }
