--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -131,17 +131,69 @@ main{
 .about{
     width: 100%;
     max-height: 500px;
-    padding-top: 100px;
+    padding-top: 13.88%;
+    padding-bottom: 6.94%;
     height: 34.72%;
     display: flex;
+    margin-left: 14.58%;
 }
 
 .about .section-title{
-    margin-left: 14.58%;
+    width: 33%;
 }
 .about-content{
     margin-right: 14.58%;
-    width: 55%;
+    width: 46%;
     font-weight: 600;
     letter-spacing: 4px;
+}
+
+/* strength */
+.strengths{
+    width: 100%;
+    padding-bottom: 6.94%;
+}
+
+.strengths .section-title{
+    margin-left: 14.58%;
+}
+
+.strengths-content{
+    display: flex;
+    gap: 15px;
+    margin-inline: 14.58%;
+    flex-wrap: wrap;
+}
+
+.strengths-item{
+    width: 30%;
+    height: 30%;
+}
+
+.strengths-item .item-img{
+    width: 100%;
+    height: 30vw;
+    max-height: 300px;
+    background-color: var(--icon-bg);
+    transform: skew(-10deg);
+    border-radius: 15px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.strengths-item span{
+    transform: skew(10deg);
+    position: absolute;
+    top: 3%;
+    left: 5%;
+    font-size: 24px;
+    font-weight: 900;
+    color: var(--text-color);
+}
+
+.strengths-item .icon{
+    width: 35%;
+    transform: skew(10deg);
 }
