--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -215,6 +215,7 @@ main {
 /* SUPPORT */
 .support {
     width: 100%;
+    padding-bottom: 100px;
 }
 
 .support-content {
@@ -284,4 +285,65 @@ main {
     width: 100%;
     background: url("../img/support_bg03.png");
     background-size: cover;
+}
+
+/* faq */
+.faq{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    gap: 20px;
+    padding-bottom: 100px;
+}
+
+.faq-content{
+    width: 71.5vw;
+    max-width: 1029px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.faq-item{
+    padding-block: 30px;
+    padding-inline: 10px;
+    background-color: var(--icon-bg);
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.faq-item .item-num{
+    font-size: 4.5rem;
+    font-weight: 700;
+    color: var(--text-color);
+}
+
+.faq-item .item-content{
+    color: #333333;
+}
+
+.faq-item .item-content h2{
+    width: max-content;
+    position: relative;
+    z-index: 1;
+}
+.faq-item .item-content h2::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    bottom: 6px;
+    width: 100%;
+    height: 8px;
+    border: none;
+    background-color: #fff;
+}
+
+.faq-item .item-content p{
+    font-size: 14px;
+    font-weight: 600;
+    color: #555555;
 }
