--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -367,3 +367,110 @@ main {
     aspect-ratio: 3/2;
     border-radius: 20px;
 }
+
+/* LIVERS */
+.livers-content{
+    display: flex;
+    gap: 20px;
+}
+
+.livers-item{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.item-footer{
+    width: 100%;
+    min-height: 80px;
+    border-radius: 15px;
+    background-color: var(--icon-bg);
+    display: flex;
+    align-items: center;
+}
+
+.item-footer p{
+    width: 80%;
+    margin: auto auto;
+}
+
+.item-button{
+    width: 50%;
+    height: 45px;
+    margin: auto auto;
+    color: var(--bg-color);
+    border: 1px solid var(--bg-color);
+    border-radius: 22.5px;
+    background-color: unset;
+    position: relative;
+}
+
+.item-button::after{
+    content: '';
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top: 50%;
+    right: 25px;
+    transform: translateY(-50%);
+    background: url("../img/send-icon.png") no-repeat center/cover;
+}
+
+.livers-btn{
+    margin-top: 40px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.livers-btn button{
+    width: 30%;
+    height: 75px;
+    border: 2px solid #fff;
+    border-radius: 37.5px;
+    background: var(--bg-color);
+    font-size: 24px;
+    color: #fff;
+    position: relative;
+    transition: all .35s;
+}
+
+.livers-btn button:hover{
+    background-color: #fff;
+    border: 2px solid var(--bg-color);
+    color: var(--bg-color);
+    transition: all .35s;
+}
+.livers-btn button:hover::before{
+    right: -84px;
+    transition: all .35s;
+}
+.livers-btn button:hover::after{
+    right: -80px;
+    transition: all .35s;
+}
+
+.livers-btn button::before{
+    content: '';
+    width: 30px;
+    height: 2px;
+    background-color: var(--icon-bg);
+    transform: translate(0, -11px) rotate(45deg);
+    position: absolute;
+    top: 50%;
+    right: -44px;
+    transition: all .35s;
+}
+.livers-btn button::after{
+    content: '';
+    width: 80px;
+    height: 2px;
+    background-color: var(--icon-bg);
+    position: absolute;
+    top: 50%;
+    right: -40px;
+    transition: all .35s;
+}
