--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -4,9 +4,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 15px;
+    padding-block: 15px;
     color: white;
-    position: fixed;
+    background-color: var(--bg-color);
+    /* position: fixed; */
     top: 0;
     z-index: 9;
 }
@@ -186,7 +187,7 @@ main {
     justify-content: center;
 }
 
-.strengths-item span {
+.strengths-item .item-img span {
     transform: skew(10deg);
     position: absolute;
     top: 3%;
@@ -199,6 +200,10 @@ main {
 .strengths-item .icon {
     width: 35%;
     transform: skew(10deg);
+}
+
+.strengths-item .icon06{
+    width: 25%;
 }
 
 .strengths-item .item-content {
@@ -371,7 +376,13 @@ main {
 /* LIVERS */
 .livers-content{
     display: flex;
-    gap: 20px;
+    gap: 3vw;
+}
+
+@media (min-width: 1440px){
+    .livers-content{
+        gap: 43.2px;
+    }
 }
 
 .livers-item{
@@ -380,6 +391,10 @@ main {
     flex-direction: column;
     justify-content: space-between;
     gap: 20px;
+}
+
+.livers-item .item-content{
+    height: 220px;
 }
 
 .item-footer{
@@ -473,4 +488,103 @@ main {
     top: 50%;
     right: -40px;
     transition: all .35s;
+}
+
+
+/* SYSTEM */
+.system{
+    position: relative;
+    width: 100vw;
+    max-width: 1440px;
+    color: #fff;
+    overflow: hidden;
+}
+
+.system > .section-title{
+    color: #000;
+    padding-left: 1%;
+    width: 100%;
+    text-align: left;
+}
+
+.sys-img{
+    width: 96.94vw;
+    max-width: 1400px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.system-back{
+    width: 100%;
+    height: 100%;
+    transform: skewY(-5deg);
+    position: absolute;
+    top: 20%;
+    left: 0;
+    background-color: var(--bg-color);
+    z-index: -1;
+}
+
+.system .strengths-content{
+    padding-top: 18%;
+}
+
+.strengths-item p span{
+    background-color: var(--num-back);
+    font-size: 18px;
+}
+
+/* FLOW */
+.flow .description{
+    color: #fff;
+}
+
+.flow-content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding-bottom: 8.6vw;
+}
+
+.flow-item{
+    padding-left: 33px;
+    height: 110px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    gap: 2.5vw;
+    position: relative;
+}
+
+.flow-item .item-num{
+    width: 80px;
+    aspect-ratio: 1/1;
+    background-color: var(--num-back);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+}
+
+.flow-item h1{
+    width: 150px;
+}
+
+.flow-item::after{
+    content: '';
+    width: 25.25px;
+    height: 19.63px;
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: url("../img/arrow.png") no-repeat center/cover;
+}
+
+.flow-item:nth-of-type(4)::after{
+    height: 0;
 }
