--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -46,7 +46,7 @@ header {
     /* Diagonal slash */
 }
 
-.main-nav li:last-child a{
+.main-nav li:nth-of-type(4) a{
     /* Styling for the Contact button */
     background-color: white;
     color: #a08a7c;
@@ -61,7 +61,7 @@ header {
     position: relative;
 }
 
-.main-nav li:last-child a::before {
+.main-nav li:nth-of-type(4) a::before {
     content: '';
     position: absolute;
     top: 50%;
