--- a/HTML/css/sp.css
+++ b/HTML/css/sp.css
@@ -92,32 +92,9 @@
     }
 
     /* SP MENU */
-    .sp_menu{
-        transform: translateX(100%);
-        display: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 2;
-        width: 100vw;
-        height: 100vh;
-        background-color: var(--bg-color);
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        padding: 0;
-        transition: all ease-in-out .35s;
-    }
-
-    .sp_menu li{
-        width: 200px;
-        list-style: none;
-        font-size: 32px;
-        font-weight: 700;
-    }
 
     .open .sp_menu{
+        opacity: 1;
         transform: translateX(0);
-        display: flex;
     }
 }
