--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -111,7 +111,7 @@ main {
 }
 
 .top {
-    width: 100%;
+    width: 100vw;
     height: 54.861vw;
     max-height: 790px;
     background: url("../img/mv.png") no-repeat;
@@ -130,6 +130,7 @@ main {
 
 .top .content h1 {
     font-size: 6.75rem;
+    text-shadow: 0px 2px 50px #757575;
 }
 
 .top .content h1 span {
@@ -140,6 +141,7 @@ main {
     margin-top: 10px;
     font-size: 1.1rem;
     letter-spacing: 3px;
+    text-shadow: 0px 2px 50px #757575;
 }
 
 .top-img {
@@ -187,7 +189,6 @@ main {
 
 /* strength */
 .strengths {
-    width: 100%;
     padding-bottom: 6.94%;
 }
 
@@ -667,7 +668,7 @@ section.contact{
     letter-spacing: 2px;
 }
 
-/* screen width: 768px ~ */
+/* screen width: 750px ~ */
 @media (max-width: 1024px){
     .strengths-content {
         width: 93vw;
