--- a/HTML/css/sp.css
+++ b/HTML/css/sp.css
@@ -185,4 +185,52 @@
     .strengths-item p {
         font-size: 22px;
     }
+
+    /* SUPPORT */
+    .support-item {
+        flex-direction: column !important;
+    }
+
+    .support-item .item-img {
+        width: unset;
+        margin: 30px 40px;
+    }
+
+    .support-item .item-content {
+        padding: unset;
+        width: 88%;
+    }
+
+    .support-item .item-content h1 {
+        font-size: 7rem;
+        line-height: 60px;
+        white-space: nowrap;
+    }
+
+    .support-item .item-content p {
+        font-size: 3.3rem;
+        margin-top: 30px;
+        margin-bottom: 52px;
+    }
+
+    .support-item:nth-of-type(1) {
+        background: url("../img/support_bg01_sp.png") no-repeat left/cover;
+    }
+    
+    .support-item:nth-of-type(2) {
+        background: url("../img/support_bg02_sp.png") no-repeat left/cover;
+    }
+    
+    .support-item:nth-of-type(3) {
+        background: url("../img/support_bg03_sp.png") no-repeat left/cover;
+    }
+    
+
+    .support-item .item-content span {
+        font-size: 20px;
+        top: 6.8%;
+        right: 7.5%;
+        left: unset;
+        padding: 11px 22px;
+    }
 }
