--- a/HTML/css/sp.css
+++ b/HTML/css/sp.css
@@ -216,15 +216,15 @@
     .support-item:nth-of-type(1) {
         background: url("../img/support_bg01_sp.png") no-repeat left/cover;
     }
-    
+
     .support-item:nth-of-type(2) {
         background: url("../img/support_bg02_sp.png") no-repeat left/cover;
     }
-    
+
     .support-item:nth-of-type(3) {
         background: url("../img/support_bg03_sp.png") no-repeat left/cover;
     }
-    
+
 
     .support-item .item-content span {
         font-size: 20px;
@@ -232,5 +232,10 @@
         right: 7.5%;
         left: unset;
         padding: 11px 22px;
+    }
+
+    /* FAQ */
+    .faq-item .item-content h2 {
+        width: unset;
     }
 }
