--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -628,11 +628,11 @@ section.contact {
     justify-content: center;
 }
 
-#contact .item-title{
+#contact .item-title {
     font-size: 8rem;
 }
 
-#contact .description{
+#contact .description {
     font-size: 1.1rem;
 }
 
@@ -710,24 +710,9 @@ section.contact {
 /* --------------------------------------------------- */
 /* -------------- C O M P A N Y ---------------------- */
 /* --------------------------------------------------- */
-.company-top {
-    width: 100vw;
-    height: 40.09vw;
-    max-height: 578px;
+
+#company-top {
     background: url(../img/company-top.png) no-repeat center/contain;
-    display: flex;
-    align-items: center;
-}
-
-.company-top .section-title {
-    color: #fff;
-    width: 71.5vw;
-    max-width: 1029px;
-    margin: 0 auto;
-}
-
-.company-top .section-title .description {
-    color: #fff;
 }
 
 .company-main {
@@ -761,4 +746,137 @@ section.contact {
     padding-top: 0;
     line-height: 80px;
     border-bottom: 1px solid #000;
+}
+
+/* --------------------------------------------------- */
+/* -------------- C O N T A C T ---------------------- */
+/* --------------------------------------------------- */
+
+#contact-top {
+    background: url(../img/contact-top.png) no-repeat center/contain;
+}
+
+.contact-step .content {
+    margin-top: 50px;
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center ;
+    font-weight: 400;
+}
+
+.contact-step .content p:nth-of-type(1){
+    font-size: 24px;
+}
+
+.contact-step .content p:nth-of-type(2){
+    font-size: 20px;
+}
+
+.step-diagram {
+    margin-block: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: center ;
+    gap: 30px;
+}
+
+.step-diagram p{
+    color: #cdcdcd;
+    font-weight: 700;
+}
+
+.step-diagram .active{
+    color: #000;
+}
+
+.step-diagram span.arrow{
+    width: 40px;
+    height: 2px;
+    background-color: #000;
+    position: relative;
+}
+
+.step-diagram span.arrow::after{
+    content: '';
+    position: absolute;
+    top: -6px;
+    right: 0;
+    width: 15px;
+    height: 2px;
+    background-color: #000;
+    transform: rotate(45deg);
+}
+
+.contact-box{
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.contact-box .boxs{
+    font-weight: 500;
+}
+
+input#format{
+    margin-left: 50px;
+    margin-right: 20px;
+}
+
+input#format:nth-of-type(1){
+    margin-left: 0;
+}
+
+.contact-form{
+    margin-top: 55px;
+}
+
+.contact-form form{
+    display: flex;
+    flex-direction: column;
+}
+
+form label{
+    margin-top: 35px;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+form input{
+    height: 60px;
+    border: none;
+    border-bottom: 1px solid #000;
+    font-size: 18px;
+}
+
+form input:focus-visible{
+    outline: none;
+}
+
+form textarea{
+    margin-top: 30px;
+    font-size: 24px;
+    resize: none;
+}
+
+form textarea:focus-visible{
+    outline: none;
+}
+
+form input#submit{
+    font-size: 24px;
+    height: max-content;
+    border: none;
+    background-color: unset;
+    color: #fff;
+}
+
+form .more-btn button{
+    width: 50%;
+}
+
+.more-btn:hover input#submit{
+    color: var(--bg-color);
+    cursor: pointer;
+    transition: all .35s;
 }
