--- a/HTML/css/common.css
+++ b/HTML/css/common.css
@@ -91,7 +91,7 @@ a:active {
 
 .section-title {
     width: 50%;
-    font-size: 108px;
+    font-size: 8rem;
     font-weight: 700;
     letter-spacing: 6px;
 }
@@ -194,9 +194,9 @@ a:active {
 .more {
     position: absolute;
     bottom: 20px;
-    right: 80px;
+    right: 120px;
     letter-spacing: 1.5px;
-    font-size: 16px;
+    font-size: 28px;
 }
 
 .more::after {
@@ -219,20 +219,6 @@ a:active {
     position: absolute;
     bottom: calc(30% + 5px);
     right: -130%;
-    transition: all .35s;
-}
-
-.more:hover {
-    cursor: pointer;
-}
-
-.more:hover::before {
-    right: -150%;
-    transition: all .35s;
-}
-
-.more:hover::after {
-    right: -150%;
     transition: all .35s;
 }
 
